# cs1440

Bingo/: CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Deck2.txt  Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h  UserInterface.cpp  UserInterface.h  deck1.txt  main.cpp
Bingo/Testing/: DeckTester.cpp  DeckTester.h  MenuOptionTester.cpp  MenuOptionTester.h  MenuTester.cpp  MenuTester.h  testMain.cpp
GenericDictionary/: CMakeLists.txt  Dictionary.h  GenericDictionary-Design.vpp.bak_000f  KeyValue.h  main.cpp
GenericDictionary/Testing/: DictionaryTester.cpp  DictionaryTester.h  KeyValueTester.cpp  KeyValueTester.h  testMain.cpp
GeoRegions/: CMakeLists.txt  City.cpp  City.h  County.cpp  County.h  CountyUserInterface.cpp  CountyUserInterface.h  GeoRegions-Design.vpp  GeoRegions-Design.vpp.bak_000f  GeoRegions-Design.vpp.bak_001d  GeoRegions-Design.vux  Menu.cpp  Menu.h  MenuOption.h  Nation.cpp  Nation.h  NationUserInterface.cpp  NationUserInterface.h  Nations.txt  Region.cpp  Region.h  State.cpp  State.h  StateUserInterface.cpp  StateUserInterface.h  UserInterface.cpp  UserInterface.h  Utils.cpp  Utils.h  World.cpp  World.h  WorldUserInterface.cpp  WorldUserInterface.h  main.cpp
GeoRegions/Testing/: RegionTester.cpp  RegionTester.h  UtilsTester.cpp  UtilsTester.h  testMain.cpp
GeoRegions/Testing/SampleData/: sampleData-1.txt  sampleData-2.txt  sampleData-3.txt  sampleData-4.txt
Triangles/: CMakeLists.txt  Edge.cpp  Edge.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h  TriangleValidator-Design.vpp  TriangleValidator-Design.vux  Utils (Stephen’s Mac Pro's conflicted copy 2017-02-13).cpp  Utils.cpp  Utils.h  main.cpp
Triangles/Testing/: EdgeTester.cpp  EdgeTester.h  PointTester.cpp  PointTester.h  TriangleTester.cpp  TriangleTester.h  Triangles Worksheet.xlsx  UtilsTester.cpp  UtilsTester.h  testMain.cpp
WeatherAnalyzer/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  Day.cpp  Day.h  Region.cpp  Region.h  Stat.cpp  Stat.h  Station.cpp  Station.h  Utils.cpp  Utils.h  main.cpp
WeatherAnalyzer/Data/: 2012-Jan-to-Mar.csv  2013-Jan-to-Mar.csv
